fix: stack social on mobile

--- a/app/themes/hunger-tv/assets/styles/components/issue.scss
+++ b/app/themes/hunger-tv/assets/styles/components/issue.scss
@@ -5,14 +5,18 @@
 		margin-top: 0;
 		margin-bottom: rhythm();
 	}
+}
 
-	footer {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
+@media (min-width: $md-min) {
+	.issue {
+		footer {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+		}
 
-	.social {
-		margin-top: 0 !important;
+		.social {
+			margin-top: 0 !important;
+		}
 	}
 }
